Demo/virtualservice.yaml
apiVersion: networking.istio.io/v1beta1
kind: VirtualService
metadata:
  name: test-virtual-service
spec:
  hosts:
    - "test1.com"   
  gateways:
    - "my-app-gateway"  
  http:
    - match:
        - uri:
            prefix: /
      route:
        - destination:
            host: nginx-svc
            port:
              number: 80
